# acoustic-complexity-certification

./: .dockerignore  .flake8  .gitattributes  .gitignore  README.md  logger_config.yaml  pyproject.toml  sound_analysis.py
src/: csv_generator.py  logging_config.py  main.py  pdf_generator.py  run.py
src/acoustic_complexity_certification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
