[project]
name = "acoustic-complexity-certification"
version = "0.1.0"
description = "Psychoacoustic Annoyance validation and sound profile certification using MOSQITO"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "mosqito==1.2.1",
    "matplotlib==3.10.9",
    "python-dotenv==0.20.0",
    "pyyaml>=6.0.1",
    "weasyprint>=61.0"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''/(\.git| \.hg| \.mypy_cache| \.tox| \.venv| _build| buck-out| build )/'''

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true